--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1,6 +1,239 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "3b4cdf5c",
+   "metadata": {},
+   "source": [
+    "# This is the start of my Google Analytics Certificate"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "0e74389f",
+   "metadata": {},
+   "source": [
+    "Data analytics is defined by the process \n",
+    "Ask\n",
+    "Prepare\n",
+    "Process\n",
+    "Analyze\n",
+    "Share\n",
+    "Act"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "f0c8d231",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Spaceship:\n",
+    "   # Class attribute\n",
+    "   tractor_beam = 'off'\n",
+    "\n",
+    "   # Instance attributes\n",
+    "   def __init__(self, name, kind):\n",
+    "       self.name = name\n",
+    "       self.kind = kind\n",
+    "       self.speed = None\n",
+    "\n",
+    "  # Instance methods\n",
+    "   def warp(self, warp):\n",
+    "       self.speed = warp\n",
+    "       print(f'Warp {warp}, engage!')\n",
+    "\n",
+    "   def tractor(self):\n",
+    "       if self.tractor_beam == 'off':\n",
+    "           self.tractor_beam = 'on'\n",
+    "           print('Tractor beam on.')\n",
+    "       else:\n",
+    "           self.tractor_beam = 'off'\n",
+    "           print('Tractor beam off')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6b47f47c-5d94-44ac-8851-557f5cb71f81",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mockingbird\n",
+      "rescue frigate\n",
+      "off\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an instance of the Spaceship class (i.e. \"instantiate\")\n",
+    "ship = Spaceship('Mockingbird','rescue frigate')\n",
+    "\n",
+    "# Check ship's name\n",
+    "print(ship.name)\n",
+    "\n",
+    "# Check what kind of ship it is\n",
+    "print(ship.kind)\n",
+    "\n",
+    "# Check tractor beam status\n",
+    "print(ship.tractor_beam)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2b9bb370-77ca-4fb9-851c-5d33c3924cf6",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warp 7, engage!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Set warp speed\n",
+    "ship.warp(7)\n",
+    "\n",
+    "# Check speed\n",
+    "ship.speed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8f2fca82-0ce3-4833-94fc-08487da3df18",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tractor beam off\n",
+      "off\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Toggle tractor beam\n",
+    "ship.tractor()\n",
+    "\n",
+    "# Check tractor beam status\n",
+    "print(ship.tractor_beam)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ed711f2-6cff-4460-83f0-f2ab9f9c4f45",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3c57d94d-eb14-4a8c-b62c-29303f3c8bd2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23.88888888888889"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def to_celsius(x):\n",
+    "   '''Convert Fahrenheit to Celsius'''\n",
+    "   return (x-32) * 5/9\n",
+    "\n",
+    "to_celsius(75)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "66e7125d-6aa9-48e0-bac6-fa2b7aa867cc",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number is negative.\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = -4\n",
+    "\n",
+    "if number > 0:\n",
+    "   print('Number is positive.')\n",
+    "elif number == 0:\n",
+    "   print('Number is zero.')\n",
+    "else:\n",
+    "   print('Number is negative.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "444173fe-9475-477f-8d01-3cbe5bb47ea6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
