--- a/Google Course Notes.ipynb
+++ b/Google Course Notes.ipynb
@@ -2018,8 +2018,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "de72aee2-7667-4b4c-8dcd-3d9a4c4352d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unhashable type: 'slice'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[10], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m dicti \u001b[38;5;241m=\u001b[39m {}\n\u001b[1;32m----> 2\u001b[0m dicti[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpene\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m1\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m2\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m3\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m      3\u001b[0m dicti\n",
+      "\u001b[1;31mTypeError\u001b[0m: unhashable type: 'slice'"
+     ]
+    }
+   ],
+   "source": [
+    "dicti = {}\n",
+    "dicti['pene': '1', '2', '3']\n",
+    "dicti"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "050183ac-392f-44e8-a91d-d970295ce92d",
    "metadata": {},
    "outputs": [],
    "source": []
